add convertedPrice(krw), redesign api (by date .. )